--- a/roles/raspberry-pi-os-down/tasks/main.yaml
+++ b/roles/raspberry-pi-os-down/tasks/main.yaml
@@ -1,4 +1,12 @@
 ---
+- name: use nftables
+  alternatives:
+    name: '{{ item }}'
+    path: /usr/sbin/{{ item }}-nft
+  loop:
+    - iptables
+    - ip6tables
+  notify: reboot
 - name: enable swap-space
   shell: update-rc.d dphys-swapfile enable && dphys-swapfile setup && dphys-swapfile swapon
   args:
