--- a/roles/k3s-server-up/defaults/main.yaml
+++ b/roles/k3s-server-up/defaults/main.yaml
@@ -4,5 +4,6 @@ k3s_cni_plugin: flannel
 k3s_flannel_backend: vxlan
 k3s_node_ip: null
 k3s_server_schedule_pods: yes
+k3s_server_url: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
 # https://github.com/rancher/k3s/releases :
 k3s_version: v1.22.5+k3s1
