--- a/roles/k3s-server-up/tasks/main.yaml
+++ b/roles/k3s-server-up/tasks/main.yaml
@@ -3,7 +3,7 @@
   template:
     dest: /etc/rancher/k3s/config.yaml
     src: config.yaml.j2
-- name: run_once
+- name: server bootstrap
   block:
     - name: install first k3s server
       environment:
@@ -25,6 +25,18 @@
         - backup kubeconfig
         - edit kubeconfig
     - meta: flush_handlers
+  run_once: yes
+- name: install remaining k3s servers
+  environment:
+    INSTALL_K3S_VERSION: '{{ k3s_version }}'
+    K3S_TOKEN: '{{ lookup("file", "build/k3s-token") }}'
+  shell:
+    cmd: curl --fail --location --silent https://get.k3s.io | sh -s - server
+    creates: /usr/local/bin/k3s-uninstall.sh
+  throttle: 1
+  when: inventory_hostname != groups.k3s_server[0]
+- name: post install
+  block:
     - name: install calico cni plugin
       block:
         - name: install operator for calico
@@ -54,12 +66,3 @@
         - hooks/k3s-post-master-up.yaml
         - hooks/post-master-up.yaml
   run_once: yes
-- name: install remaining k3s servers
-  environment:
-    INSTALL_K3S_VERSION: '{{ k3s_version }}'
-    K3S_TOKEN: '{{ lookup("file", "build/k3s-token") }}'
-  shell:
-    cmd: curl --fail --location --silent https://get.k3s.io | sh -s - server
-    creates: /usr/local/bin/k3s-uninstall.sh
-  throttle: 1
-  when: inventory_hostname != groups.k3s_server[0]
