--- a/roles/k3s-server-down/tasks/main.yaml
+++ b/roles/k3s-server-down/tasks/main.yaml
@@ -5,29 +5,33 @@
   register: k3s_server
 - block:
     - name: apply pre-server-down hooks
-      changed_when: "'created' in pre_server_down.stdout or 'configured' in pre_server_down.stdout"
       local_action:
-        module: 'command kubectl --kubeconfig=build/k3s-config.yaml apply --filename=hooks/{{ item }}.yaml'
-        removes: 'hooks/{{ item }}.yaml' # it doesn't, but it prevents this step from running if it is
-      register: pre_server_down
+        module: kubernetes.core.k8s
+        src: '{{ item }}'
+        state: present
       vars:
         ansible_become: no
-      with_items:
-        - pre-master-down
-        - k3s-pre-master-down
-        - pre-server-down
-    - name: drain and delete node
-      environment:
-        KUBECONFIG: build/k3s-config.yaml
+      with_fileglob:
+        - hooks/pre-master-down.yaml
+        - hooks/k3s-pre-master-down.yaml
+        - hooks/pre-server-down.yaml
+    - name: drain node
       local_action:
-        module: shell
-        _raw_params: |
-          kubectl drain {{ inventory_hostname }} --delete-emptydir-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets
-          kubectl delete node {{ inventory_hostname }}
-        removes: build/k3s-config.yaml # it doesn't, but it prevents this step from running if it is
+        module: 'command kubectl drain {{ inventory_hostname }} --delete-emptydir-data={% if delete_local_data %}true{% else %}false{% endif %} --force --ignore-daemonsets'
+      notify: reboot
+      vars:
+        ansible_become: no
+    - name: delete node
+      local_action:
+        kind: Node
+        module: kubernetes.core.k8s
+        name: '{{ inventory_hostname }}'
+        state: absent
       notify: reboot
       vars:
         ansible_become: no
     - name: uninstall k3s server
       command: k3s-uninstall.sh
+  environment:
+    KUBECONFIG: build/kubeconfig.yaml
   when: k3s_server.stat.exists
