--- a/roles/raspberry-pi-os-down/tasks/main.yaml
+++ b/roles/raspberry-pi-os-down/tasks/main.yaml
@@ -1,12 +1,13 @@
 ---
 - name: use nftables
-  alternatives:
+  community.general.alternatives:
     name: '{{ item }}'
     path: /usr/sbin/{{ item }}-nft
   loop:
     - iptables
     - ip6tables
   notify: reboot
+  when: ansible_lsb.major_release | int < 11
 - name: enable swap-space
   shell: update-rc.d dphys-swapfile enable && dphys-swapfile setup && dphys-swapfile swapon
   args:
