--- a/roles/raspberry-pi-os-up/tasks/main.yaml
+++ b/roles/raspberry-pi-os-up/tasks/main.yaml
@@ -15,10 +15,11 @@
   args:
     removes: /var/swap
 - name: use legacy iptables
-  alternatives:
+  community.general.alternatives:
     name: '{{ item }}'
     path: /usr/sbin/{{ item }}-legacy
   loop:
     - iptables
     - ip6tables
   notify: reboot
+  when: ansible_lsb.major_release | int < 11
