--- a/roles/k3s-agent-down/tasks/main.yaml
+++ b/roles/k3s-agent-down/tasks/main.yaml
@@ -22,5 +22,5 @@
     - name: uninstall k3s agent
       command: k3s-agent-uninstall.sh
   environment:
-    KUBECONFIG: build/kubeconfig.yaml
+    KUBECONFIG: '{{ k3s_build_dir }}/kubeconfig.yaml'
   when: k3s_agent.stat.exists
