--- a/inventory.yaml
+++ b/inventory.yaml
@@ -30,6 +30,7 @@ all:
     #github_api_token: ""
     #k3s_cni_plugin: flannel
     #k3s_flannel_backend: vxlan
+    #k3s_hooks_dir: hooks
     #k3s_node_ip: null
     ## Should pods for your workloads be scheduled on K3s servers?
     #k3s_server_schedule_pods: yes
