--- a/roles/k3s-server-up/defaults/main.yaml
+++ b/roles/k3s-server-up/defaults/main.yaml
@@ -3,6 +3,7 @@ ansible_become: yes
 k3s_build_dir: build
 k3s_cni_plugin: flannel
 k3s_flannel_backend: vxlan
+k3s_hooks_dir: hooks
 k3s_node_ip: null
 k3s_server_schedule_pods: yes
 k3s_server_url: https://{{ hostvars[groups.k3s_server[0]].k3s_node_ip | default(hostvars[groups.k3s_server[0]].ansible_default_ipv4.address) }}:6443
