--- a/roles/k3s-server-up/tasks/main.yaml
+++ b/roles/k3s-server-up/tasks/main.yaml
@@ -60,9 +60,9 @@
       vars:
         ansible_become: no
       with_fileglob:
-        - hooks/post-server-up.yaml
-        - hooks/k3s-post-master-up.yaml
-        - hooks/post-master-up.yaml
+        - '{{ k3s_hooks_dir }}/post-server-up.yaml'
+        - '{{ k3s_hooks_dir }}/k3s-post-master-up.yaml'
+        - '{{ k3s_hooks_dir }}/post-master-up.yaml'
   environment:
     KUBECONFIG: '{{ k3s_build_dir }}/kubeconfig.yaml'
   run_once: yes
