--- a/roles/k3s-agent-up/defaults/main.yaml
+++ b/roles/k3s-agent-up/defaults/main.yaml
@@ -1,6 +1,9 @@
 ---
 ansible_become: yes
 k3s_build_dir: build
+k3s_labels: [ ]
+k3s_node_external_ip: null
 k3s_node_ip: null
+k3s_taints: [ ]
 # https://github.com/rancher/k3s/releases :
 k3s_version: v1.22.5+k3s1
