--- a/roles/k3s-server-up/tasks/main.yaml
+++ b/roles/k3s-server-up/tasks/main.yaml
@@ -16,8 +16,9 @@
         flat: yes
         src: /var/lib/rancher/k3s/server/token
     - name: fix access to k3s-token
-      file:
+      local_action:
         mode: '600'
+        module: file
         path: '{{ k3s_build_dir }}/k3s-token'
   run_once: yes
 - name: install remaining k3s servers
