--- a/roles/k3s-server-up/defaults/main.yaml
+++ b/roles/k3s-server-up/defaults/main.yaml
@@ -3,6 +3,7 @@ ansible_become: yes
 k3s_build_dir: build
 k3s_cni_plugin: flannel
 k3s_flannel_backend: vxlan
+k3s_flannel_iface: null
 k3s_hooks_dir: hooks
 k3s_labels: [ ]
 k3s_node_external_ip: null
