--- a/roles/debian-up/tasks/main.yaml
+++ b/roles/debian-up/tasks/main.yaml
@@ -1,31 +1,31 @@
 ---
-- name: add environment variable NO_PROXY
-  lineinfile:
-    line: '{{ item }}="{{ no_proxy }}"'
-    path: /etc/environment
-    regexp: '^\s*{{ item }}\s*='
-  notify: reboot
-  when: proxy_url != None
-  with_items:
-    - no_proxy
-    - NO_PROXY
-- name: add environment variables HTTP_PROXY and HTTPS_PROXY
-  lineinfile:
-    line: '{{ item }}="{{ proxy_url }}"'
-    path: /etc/environment
-    regexp: '^\s*{{ item }}\s*='
-  notify: reboot
-  when: proxy_url != None
-  with_items:
-    - http_proxy
-    - HTTP_PROXY
-    - https_proxy
-    - HTTPS_PROXY
+#- name: add environment variable NO_PROXY
+#  lineinfile:
+#    line: '{{ item }}="{{ no_proxy }}"'
+#    path: /etc/environment
+#    regexp: '^\s*{{ item }}\s*='
+#  notify: reboot
+#  when: proxy_url
+#  with_items:
+#    - no_proxy
+#    - NO_PROXY
+#- name: add environment variables HTTP_PROXY and HTTPS_PROXY
+#  lineinfile:
+#    line: '{{ item }}="{{ proxy_url }}"'
+#    path: /etc/environment
+#    regexp: '^\s*{{ item }}\s*='
+#  notify: reboot
+#  when: proxy_url
+#  with_items:
+#    - http_proxy
+#    - HTTP_PROXY
+#    - https_proxy
+#    - HTTPS_PROXY
 - name: add apt proxies
   template:
     dest: /etc/apt/apt.conf.d/95proxies
     src: 95proxies.j2
-  when: proxy_url != None
+  when: proxy_url
 - name: update && upgrade full
   apt:
     update_cache: yes
