--- a/roles/raspberry-pi-hw-up/tasks/main.yaml
+++ b/roles/raspberry-pi-hw-up/tasks/main.yaml
@@ -16,7 +16,7 @@
   notify: reboot
   when: arm_64bit is not defined
 - name: ensure cgroup kernel params
-  ignore_errors: yes
+  failed_when: no
   lineinfile:
     backrefs: yes
     line: '\g<1> cgroup_enable=cpuset cgroup_enable=memory cgroup_memory=1\g<2>'
