--- a/roles/rpi-update-up/tasks/main.yaml
+++ b/roles/rpi-update-up/tasks/main.yaml
@@ -8,13 +8,15 @@
         update_cache: yes
     - name: rpi-update
       command: rpi-update
-      changed_when: "'already up to date' not in rpi_update.stdout or 'reboot is needed' in rpi_update.stdout"
+      changed_when: '"already up to date" not in rpi_update.stdout or "reboot is needed" in rpi_update.stdout'
       environment:
-        BOOT_PATH: "{{ boot_directory }}"
-        GITHUB_API_TOKEN: "{{ github_api_token | default(omit, true) }}"
+        BOOT_PATH: '{{ boot_directory }}'
+        GITHUB_API_TOKEN: '{{ github_api_token | default(omit) }}'
         ROOT_PATH: /
         SKIP_REPODELETE: 1
         SKIP_WARNING: 1
+        http_proxy: '{{ proxy_url | default(omit) }}'
+        https_proxy: '{{ proxy_url | default(omit) }}'
       notify: reboot
       register: rpi_update
     - name: stat /root/.rpi-firmware
@@ -22,28 +24,28 @@
         path: /root/.rpi-firmware
       register: rpi_firmware
     - block:
-        - name: "find kernel versions"
+        - name: find kernel versions
           find:
             file_type: directory
             paths: /root/.rpi-firmware/modules
-            patterns: "*-v8+"
+            patterns: '*-v8+'
             recurse: no
           register: found
         - block:
-            - name: "update-initramfs -c -b {{ boot_directory }}"
+            - name: update-initramfs -c -b {{ boot_directory }}
               shell:
                 cmd: update-initramfs -c -k {{ item }} -b {{ boot_directory }}
-                creates: "{{ boot_directory }}/initrd.img-{{ item }}"
-              with_items: "{{ versions }}"
-            - name: "set initramfs in {{ boot_directory }}"
+                creates: '{{ boot_directory }}/initrd.img-{{ item }}'
+              with_items: '{{ versions }}'
+            - name: set initramfs in {{ boot_directory }}
               lineinfile:
                 insertafter: '^\s*\[\s*all\s*\]'
-                line: "initramfs initrd.img-{{ item }}"
+                line: initramfs initrd.img-{{ item }}
                 path: '{{ boot_directory }}/config.txt'
                 regexp: '^initramfs\s'
-              with_items: "{{ versions }}"
+              with_items: '{{ versions }}'
               notify: reboot
           vars:
-            versions: "{{ found.files | map(attribute='path') | map('basename') }}"
+            versions: '{{ found.files | map(attribute="path") | map("basename") }}'
       when: rpi_firmware.stat.exists
   when: rpi_update
