--- a/roles/k3s-agent-up/tasks/main.yaml
+++ b/roles/k3s-agent-up/tasks/main.yaml
@@ -7,6 +7,8 @@
   environment:
     INSTALL_K3S_VERSION: '{{ k3s_version }}'
     K3S_TOKEN: '{{ lookup("file", k3s_build_dir + "/server-token") }}'
+    http_proxy: '{{ proxy_url | default(omit) }}'
+    https_proxy: '{{ proxy_url | default(omit) }}'
   shell:
     cmd: curl --fail --location --silent https://get.k3s.io | sh -s - agent
     creates: /usr/local/bin/k3s-agent-uninstall.sh
