--- a/roles/k3s-server-up/tasks/main.yaml
+++ b/roles/k3s-server-up/tasks/main.yaml
@@ -7,6 +7,8 @@
     - name: install first k3s server
       environment:
         INSTALL_K3S_VERSION: '{{ k3s_version }}'
+        http_proxy: '{{ proxy_url | default(omit) }}'
+        https_proxy: '{{ proxy_url | default(omit) }}'
       shell:
         cmd: curl --fail --location --silent https://get.k3s.io | sh -s - server
         creates: /usr/local/bin/k3s-uninstall.sh
@@ -27,6 +29,8 @@
   environment:
     INSTALL_K3S_VERSION: '{{ k3s_version }}'
     K3S_TOKEN: '{{ lookup("file", k3s_build_dir + "/server-token") }}'
+    http_proxy: '{{ proxy_url | default(omit) }}'
+    https_proxy: '{{ proxy_url | default(omit) }}'
   shell:
     cmd: curl --fail --location --silent https://get.k3s.io | sh -s - server
     creates: /usr/local/bin/k3s-uninstall.sh
